tests/transpiler/x/fs/list_assign.fs
// Generated 2025-07-21 18:37 +0700

let mutable nums: int list = [1; 2]
nums.[1] <- 3
printfn "%s" (string (nums.[1]))
